// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fails for multiple unknown options 1`] = `
"<red>● Unrecognized CLI Parameters:

  Following options were not recognized:
  [\\"jest\\", \\"test\\"]

  CLI Options Documentation:
  http://facebook.github.io/jest/docs/cli.html
</>"
`;

exports[`fails for unknown option 1`] = `
"<red>● Unrecognized CLI Parameter:

  Unrecognized option \\"unknown\\".

  CLI Options Documentation:
  http://facebook.github.io/jest/docs/cli.html
</>"
`;
